	following "scp" command, thus creating an illusion of scp never
	happenning.  Since we are now using ControlPersist (which creates
	master connection as a stand-alone process) the workaround is no
	longer necessary.

	Since we (Linaro TCWG) use ssh, this patch just removes "ssh rm
	-f", since scp will overwrite the file, if one is present.

2015-09-10  Robert Suchanek  <Robert.Suchanek@imgtec.com>

	* baseboards/multi-sim.exp (rpath_flags): Add libgomp.so check.

2015-07-30  Pedro Alves  <palves@redhat.com>

	* lib/remote.exp (close_wait_program): New procedure.
	(local_exec, standard_close): Use it.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Fix broken URLs.
	* doc/dejagnu.texi: Regenerate.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Fix 'crosscompilation'.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1 (log_dialog): Improve documentation.

2015-05-16  Filipe Brandenburger  <filbranden@google.com>

	* configure.ac: Enable subdir-objects, require automake 1.14.
	* Makefile.in: Regenerate.

2015-05-15  Filipe Brandenburger  <filbranden@google.com>

	* doc/dejagnu.xml: Fix typos such as stray }'s and @samp{...},
	possibly introduced in a conversion of .texi to SGML Docbook.
	* doc/user.xml: Likewise.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2015-05-15  Filipe Brandenburger  <filbranden@google.com>

	* runtest.exp (runtest): Introduce new --log_dialog option.
	* doc/runtest.1: Document it.
	* doc/user.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2015-05-14  Steve Ellcey  <sellcey@imgtec.com>

	* baseboards/multi-sim.exp (get_library_dirlist): New.
	(dynamic_linker_flag): Use get_library_dirlist to find dynamic
	linker.
	(rpath_flags): Use get_library_dirlist to set rpath.

2015-05-12  Steve Ellcey  <sellcey@imgtec.com>

	* baseboards/generic-sim.exp: Check $DEJAGNU_SIM_OPTION.

2015-04-17  Rob Savoye  <rob.savoye@linaro.org>

	* lib/libgloss.exp (find_g++): Look for xg++ before g++.
