@@ -19,7 +19,7 @@
   <articleinfo>
     <title>&dj;</title>
     <subtitle>The GNU Testing Framework</subtitle>
-    <date>January 2006</date>
+    <date>November 2015</date>
     <authorgroup>
       <author>
         <firstname>Rob</firstname>
@@ -32,7 +32,7 @@
     </authorgroup>
 
     <copyright>
-       <year>2006</year>
+       <year>2015</year>
        <holder>Free Software Foundation, Inc.</holder>
     </copyright>
     <!-- <legalnotice>
